--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MediCare HMS</title>
-    <meta name="description" content="Hospital Management System" />
-    <meta name="author" content="MediCare" />
 
-    <meta property="og:title" content="MediCare HMS" />
-    <meta property="og:description" content="Hospital Management System" />
-    <meta property="og:type" content="website" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Salamaat Hospital</title>
+  <meta name="description" content="Hospital Management System" />
+  <meta name="author" content="Salamaat Hospital" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-  </head>
+  <meta property="og:title" content="Salamaat Hospital" />
+  <meta property="og:description" content="Hospital Management System" />
+  <meta property="og:type" content="website" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta name="twitter:card" content="summary_large_image" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
